<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_contacts"
        android:title="@string/nav_contacts" />
    <item
        android:id="@+id/nav_call"
        android:title="@string/emergency_call" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />
</menu>
